dev branch, fixing overfow problem. going through countainers checking width, then checking wrap/nowrap, also see if there is something happening in the js files < 500

--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -25,7 +25,7 @@ ul {
 }
 
 img {
-  width: 100%;
+  // width: 100%;
 }
 
 .container-1280 {
